--- a/文章.md
+++ b/文章.md
@@ -12,7 +12,7 @@
 4. Message security
 # Compose
 所有的功能都在 MEComposeSessionHandler 这个协议里。在开发Compose 扩展的时候，需要在 Info.plist 文件中，MEComposeSession 字典里，指定一个图标和工具的描述性文字。撰写邮件窗口内就会显示这个按钮。
-![48F69B31-3F29-4F45-BCE9-0E7A2939F880.jpeg](https://cdn.nlark.com/yuque/0/2021/jpeg/1274781/1624101039216-8c654915-a332-4261-9843-7039b013b2f0.jpeg#clientId=u6cf89c0b-11e5-4&from=ui&height=435&id=u7c5bb441&margin=%5Bobject%20Object%5D&name=48F69B31-3F29-4F45-BCE9-0E7A2939F880.jpeg&originHeight=869&originWidth=858&originalType=binary&ratio=2&size=79806&status=done&style=none&taskId=ue758a358-9e3a-445d-8f51-8170b28e894&width=429)​
+![48F69B31-3F29-4F45-BCE9-0E7A2939F880.jpeg](https://cdn.nlark.com/yuque/0/2021/jpeg/1274781/1624101039216-8c654915-a332-4261-9843-7039b013b2f0.jpeg)​
 下面是方法的一些简单描述
 ![image.png](https://cdn.nlark.com/yuque/0/2021/png/1274781/1624089664154-04f97606-cc48-45fa-abdc-99eac68c2792.png#clientId=uede728f9-e3ce-4&from=paste&height=359&id=ufb2a0fd0&margin=%5Bobject%20Object%5D&name=image.png&originHeight=718&originWidth=1414&originalType=binary&ratio=2&size=375502&status=done&style=none&taskId=u15efb591-1e1e-4cc6-a462-93b52c3f5dc&width=707)
 在协议里的方法，都包含了 MEComposeSession 这个参数类型。
