--- a/文章.md
+++ b/文章.md
@@ -6,10 +6,12 @@
 
 在 21 年的 WWDC 推出了一个邮件扩展的新框架 MailKit。这套框架的主要作用就是提升邮件使用的体验，框架实现的功能主要通过以下四个方面体现
 
-1. Compose 
-2. Action
-3. Content blocking
-4. Message security
+1. Compose 撰写邮箱
+2. Action 邮件操作
+3. Content blocking 内容屏蔽
+4. Message security 内容加密
+
+
 
 MailKit 需要在 macOS 12.0+ 和 Xcode 12.5+ 的版本上使用。在 Xcode 选择 Target 时需要选中 Mail Extension。
 ![image.png](https://cdn.nlark.com/yuque/0/2021/png/1274781/1624107383217-89ebae45-e0be-4790-991f-573d6eacae71.png#clientId=u2a9b7a7a-2fbd-4&from=paste&height=373&id=u57ae70df&margin=%5Bobject%20Object%5D&name=image.png&originHeight=746&originWidth=1312&originalType=binary&ratio=2&size=98546&status=done&style=none&taskId=ud5faf5fc-32ca-4cc4-b0e5-2457a2926d3&width=656)
@@ -103,7 +105,7 @@ MEMessageSecurityHandler 协议继承自 MEMessageDecoder 和 MEMessageEncoder
 ![image.png](https://cdn.nlark.com/yuque/0/2021/png/1274781/1624110096748-43eabba9-7cf5-4e69-9b1f-8a08523779b1.png#clientId=u2a9b7a7a-2fbd-4&from=paste&height=373&id=ud4a149c3&margin=%5Bobject%20Object%5D&name=image.png&originHeight=746&originWidth=1312&originalType=binary&ratio=2&size=111471&status=done&style=none&taskId=ubc62f365-06ae-4ee7-8ffa-e27423defea&width=656)
 
 # 结语
-因为是一个全新的框架，所以本文主要以扫盲为主。另外 Mac 原生邮件软件总体来说用户不是很多，而且就连 Safari 的扩展生态都不是很好，就更别谈邮件的扩展了。
+因为是一个全新的框架，所以本文主要以扫盲为主。另外 Mac 原生邮件软件总体来说用户不是很多，而且就连 Safari 的扩展生态都不是很好，就更别谈邮件的扩展了。不过从扩展的思路来说，一个扩展能在多个 App 里去使用，这个想象的空间就大了。
 不过总开发上来说也是学习官方代码的一个好机会。功能不复杂，结构也很清晰。可以学习以协议的实现逻辑来实现现有功能的扩展需求。
 最后是 MailKit 完整的思维导图
 ![MailKit.png](https://cdn.nlark.com/yuque/0/2021/png/1274781/1624106655635-e1826187-d99a-4fb4-9de7-101bf0f1f041.png#clientId=u0879fa10-5971-4&from=drop&id=u5f89ddf0&margin=%5Bobject%20Object%5D&name=MailKit.png&originHeight=2154&originWidth=8246&originalType=binary&ratio=2&size=1097666&status=done&style=none&taskId=u3b0ecf4f-f993-4ea4-b8be-7529e2c6e7f)
